# barnes-hut-simulation

./: .gitmodules  CMakeLists.txt  barnes-hutt v2 vs.sln
barnes-hutt v2 vs/: barnes-hutt v2 vs.vcxproj  barnes-hutt v2 vs.vcxproj.filters
barnes-hutt v2 vs/include/: GLContext.h  particle.h  quad.h  simulation.h
barnes-hutt v2 vs/src/: GLContext.cpp  Main.cpp  particle.cpp  simulation.cpp
include/: ComputeShader.h  particle.h  simulation.h
shader/: computeShader.comp
src/: Main.cpp  particle.cpp  quad.cpp  simulation.cpp
